// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-ticket-rules-list Renders \`declare-ticket-rules-list\` with custom props 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-field-stub
        value="Rule"
      />
    </div>
    <div
      class="flex xs12"
    >
      <transition-stub
        name="expand-transition"
      >
        <div
          class="layout px-2 mt-1"
          style="display: none;"
        >
          <c-action-btn-stub
            class="ml-3"
            type="delete"
          />
        </div>
      </transition-stub>
    </div>
  </div>
  <div
    class="v-data-table theme--light v-data-table--selectable"
    header-text="text"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label=""
              class="text-start"
              data-value="data-table-select"
              role="columnheader"
              scope="col"
              style="width: 1px; min-width: 1px;"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </th>
            <th
              aria-label="Name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="name"
              role="columnheader"
              scope="col"
            >
              <span>
                Name
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="System name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="system_name"
              role="columnheader"
              scope="col"
            >
              <span>
                System name
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Enabled: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="enabled"
              role="columnheader"
              scope="col"
            >
              <span>
                Enabled
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Creation date: Sorted descending. Activate to remove sorting."
              aria-sort="descending"
              class="text-start sortable active desc"
              data-value="created"
              role="columnheader"
              scope="col"
            >
              <span>
                Creation date
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Last modified on: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="updated"
              role="columnheader"
              scope="col"
            >
              <span>
                Last modified on
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Last modified by: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="author.display_name"
              role="columnheader"
              scope="col"
            >
              <span>
                Last modified by
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Actions"
              class="text-start"
              data-value="actions"
              role="columnheader"
              scope="col"
            >
              <span>
                Actions
              </span>
            </th>
          </tr>
        </thead>
        <thead>
          <tr
            class="v-data-table__progress"
          >
            <th
              class="column"
              colspan="8"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
                role="progressbar"
                style="height: 2px;"
              >
                <div
                  class="v-progress-linear__background primary"
                  style="opacity: 0.3; left: 0%; width: 100%;"
                />
                <div
                  class="v-progress-linear__buffer"
                />
                <transition-stub
                  name="fade-transition"
                >
                  <div
                    class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
                  >
                    <div
                      class="v-progress-linear__indeterminate long primary"
                    />
                    <div
                      class="v-progress-linear__indeterminate short primary"
                    />
                  </div>
                </transition-stub>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-0
            </td>
            <td
              class="text-start"
            >
        system-name-0
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:48
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:48
            </td>
            <td
              class="text-start"
            >
        author-name-0
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-1
            </td>
            <td
              class="text-start"
            >
        system-name-1
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub
                value="true"
              />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:49
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:49
            </td>
            <td
              class="text-start"
            >
        author-name-1
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-2
            </td>
            <td
              class="text-start"
            >
        system-name-2
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:50
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:50
            </td>
            <td
              class="text-start"
            >
        author-name-2
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-3
            </td>
            <td
              class="text-start"
            >
        system-name-3
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub
                value="true"
              />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:51
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:51
            </td>
            <td
              class="text-start"
            >
        author-name-3
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-4
            </td>
            <td
              class="text-start"
            >
        system-name-4
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:52
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:52
            </td>
            <td
              class="text-start"
            >
        author-name-4
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-5
            </td>
            <td
              class="text-start"
            >
        system-name-5
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub
                value="true"
              />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:53
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:53
            </td>
            <td
              class="text-start"
            >
        author-name-5
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-6
            </td>
            <td
              class="text-start"
            >
        system-name-6
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:54
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:54
            </td>
            <td
              class="text-start"
            >
        author-name-6
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-7
            </td>
            <td
              class="text-start"
            >
        system-name-7
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub
                value="true"
              />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:55
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:55
            </td>
            <td
              class="text-start"
            >
        author-name-7
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-8
            </td>
            <td
              class="text-start"
            >
        system-name-8
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:56
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:56
            </td>
            <td
              class="text-start"
            >
        author-name-8
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <div
                class="v-data-table__checkbox v-simple-checkbox"
              >
                <div
                  class="v-input--selection-controls__input"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate material-icons theme--light"
                  >
                    check_box_outline_blank
                  </i>
                  <div
                    class="v-input--selection-controls__ripple primary--text"
                  />
                </div>
              </div>
            </td>
            <td
              class="text-start"
            >
        name-9
            </td>
            <td
              class="text-start"
            >
        system-name-9
            </td>
            <td
              class="text-start"
            >
              <c-enabled-stub
                value="true"
              />
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:57
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:57
            </td>
            <td
              class="text-start"
            >
        author-name-9
            </td>
            <td
              class="text-start"
            >
              <div
                class="layout"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <c-table-pagination-stub
    items-per-page="10"
    page="2"
    total-items="50"
  />
</div>
`;

exports[`declare-ticket-rules-list Renders \`declare-ticket-rules-list\` with default props 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-field-stub />
    </div>
    <div
      class="flex xs12"
    >
      <transition-stub
        name="expand-transition"
      >
        <div
          class="layout px-2 mt-1"
          style="display: none;"
        />
      </transition-stub>
    </div>
  </div>
  <div
    class="v-data-table theme--light"
    header-text="text"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="name"
              role="columnheader"
              scope="col"
            >
              <span>
                Name
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="System name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="system_name"
              role="columnheader"
              scope="col"
            >
              <span>
                System name
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Enabled: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="enabled"
              role="columnheader"
              scope="col"
            >
              <span>
                Enabled
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Creation date: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="created"
              role="columnheader"
              scope="col"
            >
              <span>
                Creation date
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Last modified on: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="updated"
              role="columnheader"
              scope="col"
            >
              <span>
                Last modified on
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Last modified by: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="author.display_name"
              role="columnheader"
              scope="col"
            >
              <span>
                Last modified by
              </span>
              <i
                aria-hidden="true"
                class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                style="font-size: 18px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Actions"
              class="text-start"
              data-value="actions"
              role="columnheader"
              scope="col"
            >
              <span>
                Actions
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="v-data-table__empty-wrapper"
          >
            <td
              colspan="7"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <c-table-pagination-stub />
</div>
`;
